--- a/kontak.html
+++ b/kontak.html
@@ -16,8 +16,8 @@
       <ul>
         <li><a href="index.html">Beranda</a></li>
         <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html" id="navLayanan">Layanan</a></li>
-        <li><a href="karir.html" id="navKarir">Karir</a></li>
+        <li><a href="layanan.html">Layanan</a></li>
+        <li><a href="karir.html">Karir</a></li>
         <li><a href="kontak.html" class="active">Kontak</a></li>
       </ul>
     </nav>
@@ -28,28 +28,39 @@
   <div id="mobileMenu">
     <a href="index.html">Beranda</a>
     <a href="profil.html">Profil</a>
-    <a href="layanan.html" id="navLayanan">Layanan</a>
-    <a href="karir.html" id="navKarir">Karir</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="karir.html">Karir</a>
     <a href="kontak.html">Kontak</a>
   </div>
 </header>
 
 <section style="padding-top:130px;">
   <h2>Hubungi Kami</h2>
+
   <p>
-    Silakan hubungi tim kami apabila Anda memerlukan layanan, informasi rekrutmen,
-    atau konsultasi. Kami siap membantu kapan saja.
+    Terima kasih telah mengunjungi Assistenku. Kami selalu siap membantu Anda dalam mendapatkan informasi 
+    seputar layanan asistensi, proses perekrutan, legalitas perusahaan, atau konsultasi kebutuhan tenaga kerja.  
+    <br><br>
+    Tim kami berkomitmen memberikan respons cepat, ramah, dan penuh perhatian demi memastikan Anda mendapatkan 
+    pengalaman terbaik dalam menggunakan layanan Assistenku. Silakan pilih salah satu metode kontak yang paling 
+    nyaman untuk Anda.
   </p>
 </section>
 
 <section>
+  <h2>Informasi Kontak Lengkap</h2>
+
   <div class="card-grid">
-    
+
     <div class="card">
-      <h3>WhatsApp</h3>
-      <p>Chat langsung dengan admin layanan.</p>
+      <h3>WhatsApp Layanan</h3>
       <p>
-        <a href="https://wa.me/628989760020" class="link-bold" target="_blank">
+        Hubungi admin layanan untuk konsultasi kebutuhan ART, babysitter, sopir, perawat lansia, 
+        serta layanan operasional lainnya.
+      </p>
+
+      <p style="margin-top:12px;">
+        <a href="https://wa.me/628989760020" target="_blank" class="link-bold">
           <b>Klik untuk WhatsApp</b>
         </a>
       </p>
@@ -57,9 +68,12 @@
 
     <div class="card">
       <h3>Email Layanan</h3>
-      <p>Kirimkan pertanyaan layanan kapan saja.</p>
       <p>
-        <a href="mailto:kontakassistenku@gmail.com?subject=Info%20lebih%20lanjut%20tentang%20layanan" class="link-bold">
+        Cocok bagi Anda yang ingin mengirimkan pertanyaan lengkap, lampiran kebutuhan, 
+        atau permintaan proposal kerja sama.
+      </p>
+      <p style="margin-top:12px;">
+        <a href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Assistenku" class="link-bold">
           <b>kontakassistenku@gmail.com</b>
         </a>
       </p>
@@ -67,9 +81,12 @@
 
     <div class="card">
       <h3>Email Karir</h3>
-      <p>Kirim pertanyaan terkait lowongan kerja.</p>
       <p>
-        <a href="mailto:karirassistenku@gmail.com?subject=Pertanyaan%20Lowongan%20Kerja" class="link-bold">
+        Digunakan untuk pelamar kerja, kandidat tenaga asistensi, atau pertanyaan terkait lowongan aktif 
+        dan proses penempatan kerja.
+      </p>
+      <p style="margin-top:12px;">
+        <a href="mailto:karirassistenku@gmail.com?subject=Pertanyaan%20Karir%20Assistenku" class="link-bold">
           <b>karirassistenku@gmail.com</b>
         </a>
       </p>
@@ -78,13 +95,25 @@
   </div>
 </section>
 
-<!-- ===== FLOATING WHATSAPP BUTTON ===== -->
+<section>
+  <h2>Jam Operasional</h2>
+  <p>
+    Assistenku beroperasi setiap hari dengan skema berikut:
+    <br><br>
+    • **Senin – Sabtu:** 08.00 – 20.00  
+    • **Minggu / Hari Libur:** 08.00 – 17.00  
+    <br>
+    Anda tetap dapat mengirim pesan di luar jam operasional, dan tim kami akan membalas segera setelah aktif.
+  </p>
+</section>
+
+<!-- FLOATING WHATSAPP BUTTON -->
 <a href="https://wa.me/628989760020" class="wa-floating" target="_blank">
   <img src="wa.png" alt="WhatsApp" />
 </a>
 
 <footer>
-  © 2025 Assistenku
+  © 2025 Assistenku – PT Assistenku Indonesia
 </footer>
 
 <script src="script.js"></script>
