--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beranda | Assistenku</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 <header>
   <div class="navbar">
-    <img src="logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
+
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Beranda</a></li>
-        <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html">Layanan</a></li>
-        <li><a href="karir.html">Karir</a></li>
-        <li><a href="kontak.html">Kontak</a></li>
+        <li><a href="/" class="active">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
       </ul>
     </nav>
+
     <div id="menuIcon">☰</div>
   </div>
 
   <div id="mobileMenu">
-    <a href="index.html">Beranda</a>
-    <a href="profil.html">Profil</a>
-    <a href="layanan.html">Layanan</a>
-    <a href="karir.html">Karir</a>
-    <a href="kontak.html">Kontak</a>
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
@@ -37,22 +39,17 @@
 
   <p>
     Assistenku hadir sebagai solusi modern untuk membantu keluarga, pekerja, dan bisnis 
-    dalam memenuhi kebutuhan asistensi profesional yang aman, mudah, dan terpercaya. 
-    Di tengah kehidupan yang semakin cepat, kami memahami bahwa setiap orang membutuhkan
-    dukungan tambahan untuk mengatur pekerjaan rumah, menjaga anak, mengelola kebutuhan harian,
-    hingga membantu bisnis bertumbuh.
+    dalam memenuhi kebutuhan asistensi profesional yang aman, mudah, dan terpercaya.
   </p>
 
   <p>
     Dengan standar kualitas tinggi, proses seleksi ketat, dan pelatihan yang terstruktur,
-    Assistenku memastikan setiap tenaga kerja yang kami hadirkan mampu memberikan pelayanan terbaik.
-    Visi kami adalah menjadi penyedia layanan asistensi paling dipercaya di Indonesia,
-    dengan mengedepankan profesionalisme, etika kerja, dan kenyamanan klien.
+    Assistenku memastikan setiap tenaga kerja memberikan pelayanan terbaik.
   </p>
 
   <p>
     Terima kasih telah mengunjungi Assistenku.  
-    Kami berharap dapat menjadi bagian dari kehidupan dan perjalanan Anda menuju kenyamanan dan efisiensi.
+    Kami berharap dapat menjadi bagian dari kehidupan Anda.
   </p>
 </section>
 
@@ -60,6 +57,6 @@
   © 2025 Assistenku
 </footer>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
