--- a/profil.html
+++ b/profil.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profil | Assistenku</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 <header>
   <div class="navbar">
-    <img src="logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="profil.html" class="active">Profil</a></li>
-        <li><a href="layanan.html">Layanan</a></li>
-        <li><a href="karir.html">Karir</a></li>
-        <li><a href="kontak.html">Kontak</a></li>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil" class="active">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
       </ul>
     </nav>
 
@@ -26,60 +26,40 @@
   </div>
 
   <div id="mobileMenu">
-    <a href="index.html">Beranda</a>
-    <a href="profil.html">Profil</a>
-    <a href="layanan.html">Layanan</a>
-    <a href="karir.html">Karir</a>
-    <a href="kontak.html">Kontak</a>
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
 <section style="padding-top:130px;">
   <h2>Tentang Assistenku</h2>
   <p>
-    Assistenku adalah platform layanan asistensi profesional yang hadir untuk menjawab kebutuhan 
-    masyarakat Indonesia dalam mendapatkan tenaga kerja yang terlatih, aman, dan berintegritas. 
-    Kami dibangun dengan visi besar untuk menjadi jembatan antara keluarga, individu, maupun 
-    pelaku usaha dengan tenaga asistensi yang memiliki standar tinggi dalam etika, kualitas layanan, 
-    dan profesionalitas kerja.
-    <br><br>
-    Didirikan sebagai solusi atas meningkatnya kebutuhan tenaga pendukung rumah tangga dan operasional, 
-    Assistenku percaya bahwa setiap keluarga berhak mendapatkan bantuan yang terpercaya, dan setiap 
-    tenaga kerja berhak mendapatkan kesempatan berkembang melalui pelatihan dan pembinaan berkelanjutan. 
-    Dengan pendekatan yang modern, terstandar, dan berbasis teknologi, Assistenku berkomitmen 
-    memberikan layanan terbaik untuk seluruh pelanggan di Indonesia.
+    Assistenku adalah platform layanan asistensi profesional …
   </p>
 </section>
 
 <section>
   <h2>Sejarah Singkat</h2>
   <p>
-    Assistenku berawal dari keresahan pendirinya terhadap rendahnya standar layanan asistensi di Indonesia, 
-    terutama dari sisi keamanan, akurasi penempatan, dan kesejahteraan pekerja. Banyak keluarga mengalami 
-    kesulitan menemukan tenaga yang dapat dipercaya, dan banyak pekerja yang kesulitan mendapatkan tempat 
-    kerja yang stabil. Dari sinilah Assistenku lahir — sebagai platform yang mengedepankan transparansi, 
-    pelatihan, seleksi ketat, dan proses pendampingan yang lebih manusiawi serta profesional.
-    <br><br>
-    Sejak berdiri, Assistenku terus mengembangkan sistem penyaluran berbasis seleksi, manajemen kompetensi, 
-    hingga sistem monitoring layanan, menyesuaikan kebutuhan keluarga modern dan perkembangan industri 
-    asistensi di Indonesia. Dengan legalitas lengkap dan struktur perusahaan yang jelas, kami terus 
-    memperluas cakupan layanan agar dapat membantu lebih banyak orang.
+    Assistenku berawal dari keresahan pendirinya …
   </p>
 </section>
 
 <section>
-  <h2>Visi</h2>
-  <p>
-    Menjadi penyedia layanan asistensi paling tepercaya dan profesional di Indonesia, yang mengutamakan 
-    keamanan, kenyamanan, dan kualitas dalam setiap layanan.
-  </p>
+  <h2>Visi & Misi</h2>
 
-  <h2>Misi</h2>
+  <h3>Visi</h3>
+  <p>Menjadi penyedia layanan asistensi paling tepercaya …</p>
+
+  <h3>Misi</h3>
   <ul>
-    <li>Menyediakan tenaga asistensi yang terlatih dan berkompeten.</li>
-    <li>Meningkatkan kesejahteraan tenaga kerja melalui pelatihan dan pembinaan berkelanjutan.</li>
-    <li>Memberikan pelayanan cepat, transparan, dan ramah bagi seluruh pelanggan.</li>
-    <li>Menciptakan standar baru dalam layanan asistensi modern berbasis teknologi.</li>
+    <li>Menyediakan tenaga asistensi terlatih.</li>
+    <li>Meningkatkan kesejahteraan tenaga kerja.</li>
+    <li>Memberikan pelayanan cepat & ramah.</li>
+    <li>Standar modern berbasis teknologi.</li>
   </ul>
 </section>
 
@@ -87,56 +67,35 @@
   <h2>Founder & Co-Founder</h2>
 
   <div class="card-grid">
-
     <div class="card">
       <h3>Abdurrahman Hanif — Founder</h3>
-      <p>
-        Abdurrahman Hanif adalah pendiri Assistenku yang memiliki visi kuat untuk membangun layanan 
-        asistensi modern yang lebih aman, profesional, dan terstruktur. Dengan pengalaman dalam 
-        manajemen operasional dan pengembangan sistem digital, Hanif berfokus membangun fondasi 
-        perusahaan yang berorientasi pada integritas, efisiensi, dan inovasi. Hanif percaya bahwa 
-        layanan asistensi bukan hanya tentang menyediakan tenaga kerja, tetapi tentang menghadirkan 
-        kepercayaan, kenyamanan, dan keberlanjutan bagi keluarga maupun pekerja.
-      </p>
+      <p>Abdurrahman Hanif adalah pendiri Assistenku …</p>
     </div>
 
     <div class="card">
       <h3>Putri Rahmadani — Co-Founder</h3>
-      <p>
-        Putri Rahmadani berperan sebagai co-founder yang berfokus pada pengelolaan operasional, 
-        pembinaan tenaga kerja, serta pengembangan kualitas layanan. Dengan kepedulian tinggi 
-        terhadap pemberdayaan perempuan dan peningkatan kualitas tenaga asistensi, Putri mendorong 
-        terciptanya lingkungan kerja yang lebih tertata dan profesional, sehingga membantu banyak 
-        tenaga kerja mendapatkan kesempatan kerja yang layak dan bermartabat.
-      </p>
+      <p>Putri Rahmadani berperan sebagai co-founder …</p>
     </div>
-
   </div>
 </section>
 
 <section>
   <h2>Legalitas Perusahaan</h2>
-  <p>Berikut dokumen legalitas Assistenku:</p>
 
   <div class="card-grid">
-    <div class="card">
-      <img src="NIB1.png" alt="NIB Dokumen 1" style="width:100%; border-radius:12px;">
-    </div>
-
-    <div class="card">
-      <img src="NIB2.png" alt="NIB Dokumen 2" style="width:100%; border-radius:12px;">
-    </div>
+    <div class="card"><img src="/NIB1.png" style="width:100%; border-radius:12px;"></div>
+    <div class="card"><img src="/NIB2.png" style="width:100%; border-radius:12px;"></div>
   </div>
 
-  <br>
-
-  <button id="legalitasBtn" class="lock-button locked">🔒 Akses Dokumen Legalitas</button>
+  <button class="btn-primary" onclick="window.open('https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk','_blank')">
+    Lihat Dokumen Legalitas
+  </button>
 </section>
 
 <footer>
   © 2025 Assistenku – PT Assistenku Indonesia
 </footer>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
