--- a/layanan.html
+++ b/layanan.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Layanan | Assistenku</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 <header>
   <div class="navbar">
-    <img src="logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html" class="active">Layanan</a></li>
-        <li><a href="karir.html">Karir</a></li>
-        <li><a href="kontak.html">Kontak</a></li>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan" class="active">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
       </ul>
     </nav>
 
@@ -26,99 +26,76 @@
   </div>
 
   <div id="mobileMenu">
-    <a href="index.html">Beranda</a>
-    <a href="profil.html">Profil</a>
-    <a href="layanan.html">Layanan</a>
-    <a href="karir.html">Karir</a>
-    <a href="kontak.html">Kontak</a>
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
 <section style="padding-top:130px;">
   <h2>Layanan Assistenku</h2>
   <p>
-    Assistenku menyediakan berbagai layanan asistensi profesional yang dirancang untuk membantu
-    keluarga, individu, dan pelaku usaha memenuhi kebutuhan sumber daya manusia yang berkualitas.
-    Setiap tenaga kerja yang kami hadirkan telah melalui seleksi ketat, wawancara mendalam, 
-    dan pembinaan berkelanjutan untuk memastikan standar pelayanan terbaik bagi Anda.
+    Assistenku menyediakan berbagai layanan asistensi profesional …
   </p>
 </section>
 
 <section>
   <div class="card-grid">
 
-    <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>
-        Layanan ART ditujukan bagi keluarga yang membutuhkan bantuan dalam menjaga kebersihan rumah,
-        menyiapkan kebutuhan harian, dan mengelola rutinitas domestik dengan rapi dan teratur.
-      </p>
+      <p>Layanan ART membantu keluarga …</p>
       <ul>
-        <li>Pembersihan rumah harian dan general cleaning</li>
-        <li>Mencuci, menyetrika, dan merapikan pakaian</li>
-        <li>Menyiapkan makanan dasar & menjaga area dapur</li>
-        <li>Mengelola kebutuhan rumah tangga secara menyeluruh</li>
+        <li>Pembersihan rumah</li>
+        <li>Mencuci & menyetrika</li>
+        <li>Masakan dasar</li>
+        <li>Pengelolaan rumah</li>
       </ul>
     </div>
 
-    <!-- Caregiver -->
     <div class="card">
-      <h3>Caregiver / Pendamping Lansia</h3>
-      <p>
-        Layanan caregiver membantu keluarga yang membutuhkan pendampingan untuk orang tua atau lansia
-        yang memerlukan pemantauan kesehatan, bantuan aktivitas harian, dan perhatian penuh.
-      </p>
+      <h3>Caregiver</h3>
+      <p>Layanan pendamping lansia …</p>
       <ul>
-        <li>Membantu mandi dan kebersihan lansia</li>
-        <li>Mengatur obat dan memastikan jadwal konsumsi</li>
-        <li>Menemani aktivitas ringan seperti jalan pagi</li>
-        <li>Mengawasi keamanan dan kondisi fisik lansia</li>
+        <li>Perawatan harian</li>
+        <li>Jadwal obat</li>
+        <li>Pengawasan kesehatan</li>
+        <li>Dampingi aktivitas</li>
       </ul>
     </div>
 
-    <!-- Driver -->
     <div class="card">
       <h3>Sopir Pribadi</h3>
-      <p>
-        Cocok untuk keluarga atau profesional yang membutuhkan pengemudi berpengalaman, 
-        memahami rute, dan dapat menjaga keamanan perjalanan.
-      </p>
+      <p>Sopir profesional …</p>
       <ul>
-        <li>Mengantar jemput keluarga / perusahaan</li>
-        <li>Menjaga kebersihan dan kondisi kendaraan</li>
-        <li>Mengetahui rute cepat dan aman</li>
-        <li>Mengemudi dengan etika, disiplin, dan sopan</li>
+        <li>Antar jemput</li>
+        <li>Perawatan kendaraan</li>
+        <li>Paham rute</li>
+        <li>Disiplin & sopan</li>
       </ul>
     </div>
 
-    <!-- Toko -->
     <div class="card">
       <h3>Penjaga Toko</h3>
-      <p>
-        Tenaga penjaga toko ideal untuk usaha retail, minimarket, butik, kios, atau bisnis rumahan.
-        Mereka bertugas membantu operasional toko secara menyeluruh.
-      </p>
+      <p>Untuk operasional toko …</p>
       <ul>
-        <li>Melayani pelanggan dengan ramah</li>
-        <li>Menata barang dan menjaga kebersihan toko</li>
-        <li>Membantu stok, pengecekan barang, dan catatan harian</li>
-        <li>Menjaga keamanan area toko</li>
+        <li>Layanan pelanggan</li>
+        <li>Menata barang</li>
+        <li>Stok & catatan</li>
+        <li>Keamanan toko</li>
       </ul>
     </div>
 
-    <!-- Lainnya -->
     <div class="card">
       <h3>Asistensi Lainnya</h3>
-      <p>
-        Layanan ini mencakup berbagai jenis pekerjaan seperti asisten pribadi, kurir internal,
-        office helper, hingga tenaga operasional perusahaan.
-      </p>
+      <p>Asisten pribadi, kurir internal, helper …</p>
       <ul>
-        <li>Membantu aktivitas administrasi ringan</li>
-        <li>Mengelola dokumen dan kebutuhan kantor kecil</li>
-        <li>Pengiriman barang internal (kurir)</li>
-        <li>Tugas operasional sesuai kebutuhan klien</li>
+        <li>Admin ringan</li>
+        <li>Dokumen kantor</li>
+        <li>Kurir internal</li>
+        <li>Operasional</li>
       </ul>
     </div>
 
@@ -127,7 +104,7 @@
 
 <section>
   <h2>Akses Dokumen Layanan</h2>
-  <p>Untuk melihat panduan layanan lengkap Assistenku, klik tombol berikut:</p>
+  <p>Tekan tombol berikut untuk membuka panduan layanan:</p>
 
   <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
@@ -136,6 +113,6 @@
   © 2025 Assistenku
 </footer>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
