--- a/kontak.html
+++ b/kontak.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontak | Assistenku</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 <header>
   <div class="navbar">
-    <img src="logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html">Layanan</a></li>
-        <li><a href="karir.html">Karir</a></li>
-        <li><a href="kontak.html" class="active">Kontak</a></li>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak" class="active">Kontak</a></li>
       </ul>
     </nav>
 
@@ -26,70 +26,67 @@
   </div>
 
   <div id="mobileMenu">
-    <a href="index.html">Beranda</a>
-    <a href="profil.html">Profil</a>
-    <a href="layanan.html">Layanan</a>
-    <a href="karir.html">Karir</a>
-    <a href="kontak.html">Kontak</a>
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
 <section style="padding-top:130px;">
-  <h2>Hubungi Kami</h2>
-
+  <h2>Hubungi Assistenku</h2>
   <p>
-    Terima kasih telah mengunjungi Assistenku. Kami selalu siap membantu Anda dalam mendapatkan informasi 
-    seputar layanan asistensi, proses perekrutan, legalitas perusahaan, atau konsultasi kebutuhan tenaga kerja.  
-    <br><br>
-    Tim kami berkomitmen memberikan respons cepat, ramah, dan penuh perhatian demi memastikan Anda mendapatkan 
-    pengalaman terbaik dalam menggunakan layanan Assistenku. Silakan pilih salah satu metode kontak yang paling 
-    nyaman untuk Anda.
+    Tim Assistenku siap membantu Anda mendapatkan layanan terbaik, informasi lengkap,
+    dan solusi sesuai kebutuhan Anda.  
+    Kami selalu berupaya memberikan respon yang cepat, ramah, dan jelas — baik untuk pelanggan,
+    mitra tenaga kerja, maupun calon pelamar.
+  </p>
+  <p>
+    Silakan gunakan salah satu saluran kontak berikut untuk menghubungi kami.
   </p>
 </section>
 
 <section>
-  <h2>Informasi Kontak Lengkap</h2>
+  <h2>Kontak Utama</h2>
 
   <div class="card-grid">
 
+    <!-- WhatsApp -->
     <div class="card">
-      <h3>WhatsApp Layanan</h3>
+      <h3>WhatsApp Resmi</h3>
       <p>
-        Hubungi admin layanan untuk konsultasi kebutuhan ART, babysitter, sopir, perawat lansia, 
-        serta layanan operasional lainnya.
+        Gunakan WhatsApp untuk konsultasi layanan, pemesanan, atau pertanyaan umum.
       </p>
 
-      <p style="margin-top:12px;">
-        <a href="https://wa.me/628989760020" target="_blank" class="link-bold">
-          <b>Klik untuk WhatsApp</b>
-        </a>
-      </p>
+      <a class="btn-primary" href="https://wa.me/628989760020" target="_blank">
+        Hubungi via WhatsApp
+      </a>
     </div>
 
+    <!-- Email umum -->
     <div class="card">
-      <h3>Email Layanan</h3>
+      <h3>Email Umum</h3>
       <p>
-        Cocok bagi Anda yang ingin mengirimkan pertanyaan lengkap, lampiran kebutuhan, 
-        atau permintaan proposal kerja sama.
+        Untuk kebutuhan informasi layanan, kemitraan, dan pertanyaan non-teknis lainnya.
       </p>
-      <p style="margin-top:12px;">
-        <a href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Assistenku" class="link-bold">
-          <b>kontakassistenku@gmail.com</b>
-        </a>
-      </p>
+
+      <a class="btn-primary" href="mailto:kontakassistenku@gmail.com">
+        kontakassistenku@gmail.com
+      </a>
     </div>
 
+    <!-- Email rekrutmen -->
     <div class="card">
-      <h3>Email Karir</h3>
+      <h3>Email Rekrutmen</h3>
       <p>
-        Digunakan untuk pelamar kerja, kandidat tenaga asistensi, atau pertanyaan terkait lowongan aktif 
-        dan proses penempatan kerja.
+        Digunakan khusus untuk pelamar kerja yang ingin mengirimkan data diri,
+        riwayat kerja, atau pertanyaan terkait lowongan.
       </p>
-      <p style="margin-top:12px;">
-        <a href="mailto:karirassistenku@gmail.com?subject=Pertanyaan%20Karir%20Assistenku" class="link-bold">
-          <b>karirassistenku@gmail.com</b>
-        </a>
-      </p>
+
+      <a class="btn-primary" href="mailto:karirassistenku@gmail.com">
+        karirassistenku@gmail.com
+      </a>
     </div>
 
   </div>
@@ -98,24 +95,18 @@
 <section>
   <h2>Jam Operasional</h2>
   <p>
-    Assistenku beroperasi setiap hari dengan skema berikut:
-    <br><br>
-    • **Senin – Sabtu:** 08.00 – 20.00  
-    • **Minggu / Hari Libur:** 08.00 – 17.00  
-    <br>
-    Anda tetap dapat mengirim pesan di luar jam operasional, dan tim kami akan membalas segera setelah aktif.
+    Kami beroperasi setiap hari dan selalu berusaha memberikan respon secepat mungkin:
   </p>
+  <ul>
+    <li>Senin – Minggu</li>
+    <li>Pukul 07.00 – 21.00 WIB</li>
+  </ul>
 </section>
 
-<!-- FLOATING WHATSAPP BUTTON -->
-<a href="https://wa.me/628989760020" class="wa-floating" target="_blank">
-  <img src="wa.png" alt="WhatsApp" />
-</a>
-
 <footer>
-  © 2025 Assistenku – PT Assistenku Indonesia
+  © 2025 Assistenku
 </footer>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
