--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beranda | Assistenku</title>
+  <title>Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
 
 <header>
@@ -36,26 +37,20 @@
 
 <section class="hero">
   <h1>Selamat Datang di Assistenku</h1>
-
   <p>
-    Assistenku hadir sebagai solusi modern untuk membantu keluarga, pekerja, dan bisnis 
-    dalam memenuhi kebutuhan asistensi profesional yang aman, mudah, dan terpercaya.
+    Assistenku merupakan layanan asistensi modern yang didirikan untuk membantu keluarga, individu, maupun bisnis
+    dalam memenuhi kebutuhan sumber daya manusia harian. Kami percaya bahwa kenyamanan hidup dimulai dari lingkungan
+    yang tertata, aman, dan dapat diandalkan.
+
+    Dengan standar kualitas tinggi, proses yang sederhana, tenaga kerja yang terlatih, serta komitmen pelayanan yang
+    konsisten, Assistenku hadir sebagai solusi yang ramah, aman, dan profesional. Kami memahami bahwa setiap keluarga
+    dan usaha memiliki kebutuhan yang berbeda, sehingga semua layanan dirancang fleksibel dan mudah diakses kapan pun Anda memerlukannya.
   </p>
 
-  <p>
-    Dengan standar kualitas tinggi, proses seleksi ketat, dan pelatihan yang terstruktur,
-    Assistenku memastikan setiap tenaga kerja memberikan pelayanan terbaik.
-  </p>
-
-  <p>
-    Terima kasih telah mengunjungi Assistenku.  
-    Kami berharap dapat menjadi bagian dari kehidupan Anda.
-  </p>
+  <a href="/layanan" class="btn-primary">Lihat Layanan</a>
 </section>
 
-<footer>
-  © 2025 Assistenku
-</footer>
+<footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
 </body>
