--- a/karir.html
+++ b/karir.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karir | Assistenku</title>
+  <title>Profil | Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
 
 <header>
@@ -15,9 +16,9 @@
     <nav>
       <ul>
         <li><a href="/">Beranda</a></li>
-        <li><a href="/profil">Profil</a></li>
+        <li><a href="/profil" class="active">Profil</a></li>
         <li><a href="/layanan">Layanan</a></li>
-        <li><a href="/karir" class="active">Karir</a></li>
+        <li><a href="/karir">Karir</a></li>
         <li><a href="/kontak">Kontak</a></li>
       </ul>
     </nav>
@@ -35,157 +36,79 @@
 </header>
 
 <section style="padding-top:130px;">
-  <h2>Karir di Assistenku</h2>
+  <h2>Profil Perusahaan</h2>
   <p>
-    Assistenku membuka peluang karir bagi tenaga kerja yang ingin berkembang secara profesional,
-    memiliki komitmen terhadap pelayanan, dan siap menjalani standar kerja modern.  
-    Kami percaya bahwa SDM adalah fondasi utama layanan kami. 
-    Setiap kandidat yang bergabung akan mendapatkan arahan, pembinaan, dan kesempatan kerja berkelanjutan 
-    yang aman dan sesuai peraturan ketenagakerjaan.
-  </p>
-
-  <p>
-    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat.  
-    Kami selalu mencari individu yang terpercaya, jujur, sopan, dan memiliki semangat belajar tinggi.
+    Assistenku adalah penyedia layanan asistensi profesional yang berdiri untuk membantu keluarga
+    dan perusahaan dalam memenuhi kebutuhan sumber daya manusia harian. Kami fokus pada kualitas,
+    keamanan, dan kenyamanan—menghadirkan tenaga kerja terlatih yang siap memberikan pelayanan terbaik.
   </p>
 </section>
 
 <section>
-  <h2>Lowongan Tersedia</h2>
+  <h2>Sejarah Singkat</h2>
+  <p>
+    Assistenku berawal dari kebutuhan masyarakat modern yang semakin kompleks. Meningkatnya kesibukan
+    kerja membuat keluarga dan bisnis membutuhkan tenaga profesional yang dapat dipercaya.
+    Pada tahun 2023, Assistenku didirikan oleh individu dengan pengalaman operasional, HR, dan layanan publik.
+    Sejak itu, kami menghadirkan layanan ART, babysitter, driver, kebersihan, dan asistensi bisnis skala kecil hingga besar.
+  </p>
+</section>
+
+<section>
+  <h2>Founder & Manajemen</h2>
 
   <div class="card-grid">
 
-    <!-- ART -->
     <div class="card">
-      <h3>Asisten Rumah Tangga (ART)</h3>
+      <img src="/founder1.png" class="founder-img">
+      <h3>Abdurrahman Hanif</h3>
       <p>
-        Membantu keluarga dalam menjaga kebersihan, kerapian, dan kenyamanan rumah.
-        Cocok untuk kandidat yang disiplin dan cekatan.
+        Memiliki pengalaman bertahun-tahun di bidang asistensi, layanan publik,
+        dan manajemen operasional. Fokus membangun ekosistem layanan profesional
+        yang mudah diakses, aman, dan memberikan dampak positif bagi keluarga maupun bisnis.
       </p>
-      <h4>Tugas:</h4>
-      <ul>
-        <li>Membersihkan rumah harian</li>
-        <li>Mencuci & menyetrika</li>
-        <li>Masakan dasar</li>
-        <li>Mengelola kebutuhan rumah tangga</li>
-      </ul>
-
-      <h4>Persyaratan:</h4>
-      <ul>
-        <li>Usia minimal 18 tahun</li>
-        <li>Sehat jasmani</li>
-        <li>Berkomitmen dan disiplin</li>
-        <li>Jujur dan sopan</li>
-      </ul>
     </div>
 
-    <!-- CAREGIVER -->
     <div class="card">
-      <h3>Caregiver / Pendamping Lansia</h3>
+      <img src="/founder2.png" class="founder-img">
+      <h3>Putri Rahmadani</h3>
       <p>
-        Merawat dan mendampingi lansia dengan penuh kesabaran serta tanggung jawab.
+        Spesialis dalam perekrutan, pelatihan, dan pengembangan tenaga kerja rumah tangga,
+        pengasuh bayi dan lansia, serta asistensi pribadi. Menyusun standar kualitas SDM
+        untuk memastikan klien mendapatkan pelayanan terbaik.
       </p>
-      <h4>Tugas:</h4>
-      <ul>
-        <li>Membantu aktivitas harian lansia</li>
-        <li>Mengawasi jadwal obat</li>
-        <li>Membantu mobilitas lansia</li>
-        <li>Menjaga keamanan & kenyamanan</li>
-      </ul>
-
-      <h4>Persyaratan:</h4>
-      <ul>
-        <li>Usia 20–45 tahun</li>
-        <li>Sehat jasmani</li>
-        <li>Memiliki rasa empati tinggi</li>
-        <li>Tidak mudah emosi</li>
-      </ul>
-    </div>
-
-    <!-- SOPIR -->
-    <div class="card">
-      <h3>Sopir Pribadi</h3>
-      <p>
-        Mengemudi untuk kebutuhan keluarga atau perusahaan dengan aman dan profesional.
-      </p>
-      <h4>Tugas:</h4>
-      <ul>
-        <li>Antar jemput harian</li>
-        <li>Perawatan kendaraan dasar</li>
-        <li>Memahami rute & navigasi</li>
-        <li>Mengemudi defensif dan sopan</li>
-      </ul>
-
-      <h4>Persyaratan:</h4>
-      <ul>
-        <li>Memiliki SIM A aktif</li>
-        <li>Berpengalaman mengemudi</li>
-        <li>Disiplin waktu</li>
-        <li>Berperilaku sopan & tenang</li>
-      </ul>
-    </div>
-
-    <!-- PENJAGA TOKO -->
-    <div class="card">
-      <h3>Penjaga Toko</h3>
-      <p>
-        Menangani operasional toko harian dan pelayanan pelanggan.
-      </p>
-      <h4>Tugas:</h4>
-      <ul>
-        <li>Melayani pembeli</li>
-        <li>Menata barang</li>
-        <li>Mencatat stok</li>
-        <li>Menjaga kebersihan area kerja</li>
-      </ul>
-
-      <h4>Persyaratan:</h4>
-      <ul>
-        <li>Ramah & komunikatif</li>
-        <li>Teliti & rapi</li>
-        <li>Mampu bekerja berdiri</li>
-        <li>Jujur & bertanggung jawab</li>
-      </ul>
-    </div>
-
-    <!-- ASISTEN PRIBADI -->
-    <div class="card">
-      <h3>Asisten Pribadi / Helper</h3>
-      <p>
-        Tugas operasional ringan seperti kurir internal, admin sederhana, dan bantuan aktivitas harian.
-      </p>
-
-      <h4>Tugas:</h4>
-      <ul>
-        <li>Membantu administrasi</li>
-        <li>Mengantar dokumen</li>
-        <li>Mengelola kebutuhan operasional</li>
-        <li>Back-up tugas kantor/rumah</li>
-      </ul>
-
-      <h4>Persyaratan:</h4>
-      <ul>
-        <li>Pandai berkomunikasi</li>
-        <li>Cekatan & bisa multitasking</li>
-        <li>Disiplin & tertata</li>
-        <li>Berpenampilan rapi</li>
-      </ul>
     </div>
 
   </div>
 </section>
 
 <section>
-  <h2>Akses Informasi Sistem Gaji</h2>
-  <p>Klik tombol berikut setelah membuka kunci akses:</p>
+  <h2>Legalitas Perusahaan</h2>
 
-  <button id="lockKarirBtn" class="lock-button locked">🔒 Akses Terkunci</button>
+  <div class="card-grid">
+
+    <div class="card">
+      <h3>NIB Resmi</h3>
+      <p>Nomor Induk Berusaha resmi terdaftar sebagai penyedia jasa tenaga kerja.</p>
+      <img src="/NIB1.png" class="legal-img">
+    </div>
+
+    <div class="card">
+      <h3>Legalitas Tambahan</h3>
+      <p>Dokumen izin, sertifikasi, dan standar operasional yang sudah terverifikasi.</p>
+      <img src="/NIB2.png" class="legal-img">
+
+      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
+         class="btn-primary" target="_blank">
+        Lihat Semua Dokumen Legalitas
+      </a>
+    </div>
+
+  </div>
 </section>
 
-<footer>
-  © 2025 Assistenku
-</footer>
+<footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
 </body>
-  </html>
+</html>
