--- a/profil.html
+++ b/profil.html
@@ -6,6 +6,7 @@
   <title>Profil | Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
 
 <header>
@@ -35,47 +36,49 @@
 </header>
 
 <section style="padding-top:130px;">
-  <h2>Tentang Assistenku</h2>
+  <h2>Profil Perusahaan</h2>
   <p>
-    Assistenku adalah platform layanan asistensi profesional …
+    Assistenku adalah penyedia layanan asistensi profesional yang berdiri untuk membantu keluarga
+    dan perusahaan dalam memenuhi kebutuhan sumber daya manusia harian. Kami fokus pada kualitas,
+    keamanan, dan kenyamanan—menghadirkan tenaga kerja terlatih yang siap memberikan pelayanan terbaik.
   </p>
 </section>
 
 <section>
   <h2>Sejarah Singkat</h2>
   <p>
-    Assistenku berawal dari keresahan pendirinya …
+    Assistenku berawal dari kebutuhan masyarakat modern yang semakin kompleks. Meningkatnya kesibukan
+    kerja membuat keluarga dan bisnis membutuhkan tenaga profesional yang dapat dipercaya.
+    Pada tahun 2023, Assistenku didirikan oleh individu dengan pengalaman operasional, HR, dan layanan publik.
+    Sejak itu, kami menghadirkan layanan ART, babysitter, driver, kebersihan, dan asistensi bisnis skala kecil hingga besar.
   </p>
 </section>
 
 <section>
-  <h2>Visi & Misi</h2>
-
-  <h3>Visi</h3>
-  <p>Menjadi penyedia layanan asistensi paling tepercaya …</p>
-
-  <h3>Misi</h3>
-  <ul>
-    <li>Menyediakan tenaga asistensi terlatih.</li>
-    <li>Meningkatkan kesejahteraan tenaga kerja.</li>
-    <li>Memberikan pelayanan cepat & ramah.</li>
-    <li>Standar modern berbasis teknologi.</li>
-  </ul>
-</section>
-
-<section>
-  <h2>Founder & Co-Founder</h2>
+  <h2>Founder & Manajemen</h2>
 
   <div class="card-grid">
+
     <div class="card">
-      <h3>Abdurrahman Hanif — Founder</h3>
-      <p>Abdurrahman Hanif adalah pendiri Assistenku …</p>
+      <img src="/founder1.png" class="founder-img">
+      <h3>Abdurrahman Hanif</h3>
+      <p>
+        Memiliki pengalaman bertahun-tahun di bidang asistensi, layanan publik,
+        dan manajemen operasional. Fokus membangun ekosistem layanan profesional
+        yang mudah diakses, aman, dan memberikan dampak positif bagi keluarga maupun bisnis.
+      </p>
     </div>
 
     <div class="card">
-      <h3>Putri Rahmadani — Co-Founder</h3>
-      <p>Putri Rahmadani berperan sebagai co-founder …</p>
+      <img src="/founder2.png" class="founder-img">
+      <h3>Putri Rahmadani</h3>
+      <p>
+        Spesialis dalam perekrutan, pelatihan, dan pengembangan tenaga kerja rumah tangga,
+        pengasuh bayi dan lansia, serta asistensi pribadi. Menyusun standar kualitas SDM
+        untuk memastikan klien mendapatkan pelayanan terbaik.
+      </p>
     </div>
+
   </div>
 </section>
 
@@ -83,18 +86,28 @@
   <h2>Legalitas Perusahaan</h2>
 
   <div class="card-grid">
-    <div class="card"><img src="/NIB1.png" style="width:100%; border-radius:12px;"></div>
-    <div class="card"><img src="/NIB2.png" style="width:100%; border-radius:12px;"></div>
-  </div>
 
-  <button class="btn-primary" onclick="window.open('https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk','_blank')">
-    Lihat Dokumen Legalitas
-  </button>
+    <div class="card">
+      <h3>NIB Resmi</h3>
+      <p>Nomor Induk Berusaha resmi terdaftar sebagai penyedia jasa tenaga kerja.</p>
+      <img src="/NIB1.png" class="legal-img">
+    </div>
+
+    <div class="card">
+      <h3>Legalitas Tambahan</h3>
+      <p>Dokumen izin, sertifikasi, dan standar operasional yang sudah terverifikasi.</p>
+      <img src="/NIB2.png" class="legal-img">
+
+      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
+         class="btn-primary" target="_blank">
+        Lihat Semua Dokumen Legalitas
+      </a>
+    </div>
+
+  </div>
 </section>
 
-<footer>
-  © 2025 Assistenku – PT Assistenku Indonesia
-</footer>
+<footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
 </body>
