--- a/layanan.html
+++ b/layanan.html
@@ -6,11 +6,12 @@
   <title>Layanan | Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
 
 <header>
   <div class="navbar">
-    <img src="/logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo">
 
     <nav>
       <ul>
@@ -37,7 +38,9 @@
 <section style="padding-top:130px;">
   <h2>Layanan Assistenku</h2>
   <p>
-    Assistenku menyediakan berbagai layanan asistensi profesional …
+    Assistenku menyediakan berbagai layanan asistensi profesional yang dirancang untuk membantu keluarga
+    dan bisnis menjalankan aktivitas harian dengan lebih mudah. Proses seleksi ketat memastikan setiap tenaga
+    kerja memiliki kemampuan, etika, dan kualitas pelayanan yang dapat dipercaya.
   </p>
 </section>
 
@@ -46,56 +49,68 @@
 
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Layanan ART membantu keluarga …</p>
+      <p>
+        Layanan ART membantu keluarga dalam menjaga kebersihan, kerapian, dan pengelolaan rumah tangga
+        dengan standar kerja yang lebih modern dan terstruktur.
+      </p>
       <ul>
         <li>Pembersihan rumah</li>
         <li>Mencuci & menyetrika</li>
         <li>Masakan dasar</li>
-        <li>Pengelolaan rumah</li>
+        <li>Pengelolaan perlengkapan rumah</li>
       </ul>
     </div>
 
     <div class="card">
       <h3>Caregiver</h3>
-      <p>Layanan pendamping lansia …</p>
+      <p>
+        Memberikan pendampingan dan perawatan harian kepada lansia dengan empati dan tanggung jawab penuh,
+        membantu keluarga memastikan keselamatan dan kenyamanan orang tua mereka.
+      </p>
       <ul>
         <li>Perawatan harian</li>
-        <li>Jadwal obat</li>
-        <li>Pengawasan kesehatan</li>
-        <li>Dampingi aktivitas</li>
+        <li>Mengelola jadwal obat</li>
+        <li>Mendampingi aktivitas lansia</li>
+        <li>Monitoring kondisi fisik</li>
       </ul>
     </div>
 
     <div class="card">
       <h3>Sopir Pribadi</h3>
-      <p>Sopir profesional …</p>
+      <p>
+        Layanan sopir profesional untuk kebutuhan keluarga maupun bisnis, dengan standar berkendara aman,
+        sopan, serta memahami rute dengan baik.
+      </p>
       <ul>
-        <li>Antar jemput</li>
-        <li>Perawatan kendaraan</li>
-        <li>Paham rute</li>
-        <li>Disiplin & sopan</li>
+        <li>Antar jemput harian</li>
+        <li>Perawatan kendaraan dasar</li>
+        <li>Memahami rute & navigasi</li>
+        <li>Mengemudi defensif</li>
       </ul>
     </div>
 
     <div class="card">
       <h3>Penjaga Toko</h3>
-      <p>Untuk operasional toko …</p>
+      <p>
+        Menangani operasional toko dan pelayanan pelanggan dengan rapi, disiplin, dan profesional.
+      </p>
       <ul>
-        <li>Layanan pelanggan</li>
+        <li>Melayani pembeli</li>
         <li>Menata barang</li>
-        <li>Stok & catatan</li>
-        <li>Keamanan toko</li>
+        <li>Stok barang</li>
+        <li>Menjaga kebersihan area kerja</li>
       </ul>
     </div>
 
     <div class="card">
       <h3>Asistensi Lainnya</h3>
-      <p>Asisten pribadi, kurir internal, helper …</p>
+      <p>
+        Asisten pribadi, helper, kurir internal, dan berbagai bantuan operasional lain untuk kebutuhan rumah atau kantor.
+      </p>
       <ul>
         <li>Admin ringan</li>
-        <li>Dokumen kantor</li>
-        <li>Kurir internal</li>
-        <li>Operasional</li>
+        <li>Kurir dokumen</li>
+        <li>Bantuan operasional</li>
       </ul>
     </div>
 
@@ -104,14 +119,12 @@
 
 <section>
   <h2>Akses Dokumen Layanan</h2>
-  <p>Tekan tombol berikut untuk membuka panduan layanan:</p>
+  <p>Tekan tombol berikut untuk membuka panduan biaya layanan:</p>
 
   <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
 
-<footer>
-  © 2025 Assistenku
-</footer>
+<footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
 </body>
