--- a/kontak.html
+++ b/kontak.html
@@ -6,11 +6,12 @@
   <title>Kontak | Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
 
 <header>
   <div class="navbar">
-    <img src="/logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo">
 
     <nav>
       <ul>
@@ -35,77 +36,36 @@
 </header>
 
 <section style="padding-top:130px;">
-  <h2>Hubungi Assistenku</h2>
-  <p>
-    Tim Assistenku siap membantu Anda mendapatkan layanan terbaik, informasi lengkap,
-    dan solusi sesuai kebutuhan Anda.  
-    Kami selalu berupaya memberikan respon yang cepat, ramah, dan jelas — baik untuk pelanggan,
-    mitra tenaga kerja, maupun calon pelamar.
-  </p>
-  <p>
-    Silakan gunakan salah satu saluran kontak berikut untuk menghubungi kami.
-  </p>
-</section>
-
-<section>
-  <h2>Kontak Utama</h2>
+  <h2>Hubungi Kami</h2>
+  <p>Silakan hubungi kami melalui:</p>
 
   <div class="card-grid">
 
-    <!-- WhatsApp -->
     <div class="card">
-      <h3>WhatsApp Resmi</h3>
-      <p>
-        Gunakan WhatsApp untuk konsultasi layanan, pemesanan, atau pertanyaan umum.
-      </p>
-
+      <h3>WhatsApp</h3>
       <a class="btn-primary" href="https://wa.me/628989760020" target="_blank">
-        Hubungi via WhatsApp
+        Chat WhatsApp
       </a>
     </div>
 
-    <!-- Email umum -->
     <div class="card">
-      <h3>Email Umum</h3>
-      <p>
-        Untuk kebutuhan informasi layanan, kemitraan, dan pertanyaan non-teknis lainnya.
-      </p>
-
+      <h3>Email Informasi Layanan</h3>
       <a class="btn-primary" href="mailto:kontakassistenku@gmail.com">
-        kontakassistenku@gmail.com
+        Kirim Email
       </a>
     </div>
 
-    <!-- Email rekrutmen -->
     <div class="card">
-      <h3>Email Rekrutmen</h3>
-      <p>
-        Digunakan khusus untuk pelamar kerja yang ingin mengirimkan data diri,
-        riwayat kerja, atau pertanyaan terkait lowongan.
-      </p>
-
+      <h3>Email Lowongan Kerja</h3>
       <a class="btn-primary" href="mailto:karirassistenku@gmail.com">
-        karirassistenku@gmail.com
+        Kirim Email
       </a>
     </div>
 
   </div>
 </section>
 
-<section>
-  <h2>Jam Operasional</h2>
-  <p>
-    Kami beroperasi setiap hari dan selalu berusaha memberikan respon secepat mungkin:
-  </p>
-  <ul>
-    <li>Senin – Minggu</li>
-    <li>Pukul 07.00 – 21.00 WIB</li>
-  </ul>
-</section>
-
-<footer>
-  © 2025 Assistenku
-</footer>
+<footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
 </body>
